; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/checkasm/extr_hevc_add_res.c_checkasm_check_hevc_add_res.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/checkasm/extr_hevc_add_res.c_checkasm_check_hevc_add_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"add_residual\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @checkasm_check_hevc_add_res() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 8, i32* %1, align 4
  br label %3

3:                                                ; preds = %12, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp sle i32 %4, 10
  br i1 %5, label %6, label %15

6:                                                ; preds = %3
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @ff_hevc_dsp_init(i32* %2, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @check_add_res(i32 %9, i32 %10)
  br label %12

12:                                               ; preds = %6
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %1, align 4
  br label %3

15:                                               ; preds = %3
  %16 = call i32 @report(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ff_hevc_dsp_init(i32*, i32) #1

declare dso_local i32 @check_add_res(i32, i32) #1

declare dso_local i32 @report(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
